syntax = "proto3";

package model;

message PriceChange {
  string ticker = 1;
  double price = 2;
}